# asampo-gtk

./: .gitignore  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
appimage/: AppRun  Dockerfile  Makefile  asampo.desktop  docker-entry.sh
flatpak/: .gitignore  Makefile  io.github.mkforsb.asampo_gtk.desktop  io.github.mkforsb.asampo_gtk.json  io.github.mkforsb.asampo_gtk.metainfo.xml
resources/: asampo.ui  drum-machine.ui  export-dialog.ui  input-dialog.ui  resources.gresource.xml  samples-sidebar-sets-member-entry.ui  sequences-list-row.ui  sets-details-sample-list-row.ui  sets-list-row.ui  sources-list-row.ui  style.css
src/: appmessage.rs  config.rs  configfile.rs  dialogs.rs  ext.rs  labels.rs  main.rs  menus.rs  model.rs  model_util.rs  samples.rs  savefile.rs  sources.rs  testutils.rs  timers.rs  update_model.rs  update_view.rs  util.rs  view.rs
src/model/: app.rs  core.rs  delegate.rs  drum_machine.rs  message_queue.rs  mod.rs  signals.rs  util.rs  view.rs  viewflags.rs  viewvalues.rs
src/tests/model/: core.rs
src/testutils/: bolero_utils.rs  fake_audiohasher.rs  fake_savefile.rs
src/testutils/arbitrary/model/: core.rs
src/thread/: export.rs  mod.rs
src/view/: dialogs.rs  menus.rs  mod.rs  samples.rs  sequences.rs  sets.rs  settings.rs  sources.rs
test_assets/configfile/: v1.json  v2.json  v3.json
utils/: appmodel-symbols.py  delete-trash.py  get-template-children.py  long-lines.py  sort-tests-check.sh  sort-tests.py  unused-template-children.py
