[package]
name = "asampo-gtk"
version = "0.0.0"
edition = "2021"

[dev-dependencies]
bolero = "0.11.1"
libasampo = { git = "https://github.com/mkforsb/libasampo", features = ["mocks", "fakes", "audiothread-integration", "testables"] }
tempfile = "3.10.1"

[dependencies]
anyhow = "1.0.82"
audiothread = { git = "https://github.com/mkforsb/libasampo" }
dirs = "5.0.1"
env_logger = "0.11.3"
gtk = { package = "gtk4", version = "0.8.1", features = ["v4_12"] }
libasampo = { git = "https://github.com/mkforsb/libasampo", features = ["audiothread-integration"] }
log = "0.4.21"
regex = "1.10.4"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
single_value_channel = "1.2.2"
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[build-dependencies]
glib-build-tools = "0.19.0"

[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
bolero = { git = "https://github.com/mkforsb/bolero", branch = "disable-shrinking" }
